[gd_scene load_steps=4 format=3 uid="uid://cvf7yf84caxyx"]

[ext_resource type="Script" uid="uid://f8oyhlreu6t3" path="res://food_spawner/food_spawner_card.gd" id="1_6e0sx"]
[ext_resource type="PackedScene" uid="uid://bdhcqi3n33rlo" path="res://creature_card/color_ui.tscn" id="2_vajrq"]
[ext_resource type="PackedScene" uid="uid://d2gua8cqell5g" path="res://creature_card/value_ui.tscn" id="3_ukx76"]

[node name="FoodSpawnerCard" type="PanelContainer"]
custom_minimum_size = Vector2(200, 0)
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_6e0sx")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Comedouro"

[node name="Color" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_vajrq")]
layout_mode = 2
title = "Cor"
editable = true

[node name="ColorSTD" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_ukx76")]
layout_mode = 2
title = "Variação"
format_string = "%.1f"
min_value = 0.0
editable = true
title_min_width = 60.0
value_min_width = 30.0

[node name="SpawnRate" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_ukx76")]
layout_mode = 2
title = "Taxa"
format_string = "%.1f"
min_value = 0.1
max_value = 10.0
editable = true
title_min_width = 60.0
value_min_width = 30.0

[node name="EnergyProvided" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_ukx76")]
layout_mode = 2
title = "Energia"
format_string = "%.0f"
min_value = -100.0
max_value = 100.0
editable = true
central_tick = true
title_min_width = 60.0
value_min_width = 30.0

[node name="DecayTime" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_ukx76")]
layout_mode = 2
title = "Tempo"
format_string = "%.0f"
min_value = 0.0
max_value = 120.0
editable = true
title_min_width = 60.0
value_min_width = 30.0
